testing_temp/temp-compiler_output__Adimensional_Time_int8_uint8_True_False_-8382677896755011034_True_False__.txt
testing_temp\temp-test__Adimensional_Time_int8_uint8_True_False_-8382677896755011034_True_False__.cpp: In function 'int main(int, char**)':
testing_temp\temp-test__Adimensional_Time_int8_uint8_True_False_-8382677896755011034_True_False__.cpp:11:147: error: invalid use of incomplete type 'struct dim_analysis::Unmatched_dimensions_in_addition_between<signed char, Dimensions<std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, unsigned char, Dimensions<std::ratio<0ll>, std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
             std::int8_t bi_a = 7;std::uint8_t bi_b = 2;auto bi_c = bi_a += bi_b;int8<Adimensional> lt_a(7);uint8<Time> lt_b(2);auto lt_c = lt_a + lt_b;std::cout << bi_c == lt_c.value << std::endl;std::cout << std::is_same<decltype(bi_c), decltype(lt_c.value)>::result;
                                                                                                                                                   ^~~~
In file included from testing_temp\temp-test__Adimensional_Time_int8_uint8_True_False_-8382677896755011034_True_False__.cpp:5:0:
testing_temp\../dimensional_analysis.h:242:26: note: declaration of 'struct dim_analysis::Unmatched_dimensions_in_addition_between<signed char, Dimensions<std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> >, unsigned char, Dimensions<std::ratio<0ll>, std::ratio<1ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll>, std::ratio<0ll> > >'
   SAME_UNITS_OPERATOR(+, Unmatched_dimensions_in_addition_between)
                          ^
testing_temp\../dimensional_analysis.h:194:94: note: in definition of macro 'SAME_UNITS_OPERATOR'
    template<typename NumT_lhs, typename DimsLhs, typename NumT_rhs, typename DimsRhs> struct ERROR_MESSAGE;\
                                                                                              ^~~~~~~~~~~~~
testing_temp\temp-test__Adimensional_Time_int8_uint8_True_False_-8382677896755011034_True_False__.cpp:11:259: error: template argument 2 is invalid
             std::int8_t bi_a = 7;std::uint8_t bi_b = 2;auto bi_c = bi_a += bi_b;int8<Adimensional> lt_a(7);uint8<Time> lt_b(2);auto lt_c = lt_a + lt_b;std::cout << bi_c == lt_c.value << std::endl;std::cout << std::is_same<decltype(bi_c), decltype(lt_c.value)>::result;
                                                                                                                                                                                                                                                                   ^
